--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.3",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.514.0",
     "mongoose": "^8.15.1",
+    "motion": "^12.16.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.51"
   },
   "devDependencies": {
@@ -29,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
